# liblangtag

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  common.css  configure.ac  git.mk  index.html  index.muse  liblangtag-gobject-uninstalled.pc.in  liblangtag-gobject.pc.in  liblangtag-uninstalled.pc.in  liblangtag.pc.in  requires
data/: Makefile.am  reg2xml.c
docs/: Container.html  Makefile.am  Module.html  Utilities.html  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  liblangtag-Container---Extension.html  liblangtag-Container---Extlang.html  liblangtag-Container---Grandfathered.html  liblangtag-Container---Language.html  liblangtag-Container---Redundant.html  liblangtag-Container---Region.html  liblangtag-Container---Script.html  liblangtag-Container---Tag.html  liblangtag-Container---Variant.html  liblangtag-Database---Extlang.html  liblangtag-Database---Grandfathered.html  liblangtag-Database---Language.html  liblangtag-Database---Redundant.html  liblangtag-Database---Region.html  liblangtag-Database---Script.html  liblangtag-Database---Variant.html  liblangtag-Database.html  liblangtag-Doubly-Linked-Lists.html  liblangtag-Error.html  liblangtag-Miscellaneous-Macros.html  liblangtag-Module---Accessor.html  liblangtag-Module---Data.html  liblangtag-Strings.html  liblangtag-docs.sgml  liblangtag.devhelp2  object-tree.html
extensions/: Makefile.am  lt-ext-ldml-t.c  lt-ext-ldml-u.c
liblangtag/: Makefile.am  buildaliastbl.sh  langtag.h  lt-atomic.h  lt-database.c  lt-database.h  lt-division-private.h  lt-division.c  lt-division.h  lt-error.c  lt-error.h  lt-ext-module-data.c  lt-ext-module-data.h  lt-ext-module-private.h  lt-ext-module.c  lt-ext-module.h  lt-extension-private.h  lt-extension.c  lt-extension.h  lt-extlang-db.c  lt-extlang-db.h  lt-extlang-private.h  lt-extlang.c  lt-extlang.h  lt-grandfathered-db.c  lt-grandfathered-db.h  lt-grandfathered-private.h  lt-grandfathered.c  lt-grandfathered.h  lt-iter-private.h  lt-iter.c  lt-iter.h  lt-lang-db.c  lt-lang-db.h  lt-lang-private.h  lt-lang.c  lt-lang.h  lt-list.c  lt-list.h  lt-lock.h  (+36 more)
liblangtag-gobject/: Makefile.am  gendeps.sh  gengir.sh  lt-gobject.c  lt-gobject.h
liblangtag/extensions/: Makefile.am  lt-ext-ldml-t.c  lt-ext-ldml-u.c  lt-ext-ldml.c
m4macros/: va_copy.m4
tests/: Makefile.am  check-extlang.c  check-grandfathered.c  check-lang.c  check-list.c  check-region.c  check-script.c  check-tag.c  check-trie.c  check-variant.c  extlang-db.c  grandfathered-db.c  lang-db.c  lang.c  main.c  main.h  redundant-db.c  region-db.c  region.c  script-db.c  script.c  tag.c  variant-db.c
